@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for pre-release sg3_utils-1.48 [20221020] [svn: r975]
+Changelog for pre-release sg3_utils-1.48 [20221027] [svn: r976]
   - some utilities: add experimental --json[=JO] option
   - sg_z_act_query: new utility for sending either a
     Zone activate or Zone query command
@@ -69,6 +69,7 @@ Changelog for pre-release sg3_utils-1.48 [20221020] [svn: r975]
   - sg_ses: add exp_sas_addr acronym for getting expander's
     SAS address
   - sg_turs: change nanosleep() to Sleep() in MinGW
+  - sg_stream_ctl: fix --get indexing
   - inhex/logs_last_n.hex: new, tests for the 4 "Last n ..."
     log (sub)pages
   - sg_lib: add sg_pdt_s_eq() to cope with ZBC disks which may
